# openai-embedding-viewer

./: README.md  main.py  pyproject.toml  test_words.csv
